Design: fix header overlapping via background and border

--- a/src/app/shared/components/page-header/page-header.component.scss
+++ b/src/app/shared/components/page-header/page-header.component.scss
@@ -18,6 +18,7 @@
     &__group {
       display: flex;
       margin-right: 10px;
+      align-items: center;
     }
   }
 
